# test-tecnico-ai-engineer

./: .env.example  .gitignore  INSTRUCTIONS.md  README.md  main.py  pyproject.toml
notebooks/: 01_explore_data.ipynb
outputs/: parsed_menus.json  structured_query_log.json  submission.csv  submission_rag.csv  submission_structured.csv  technique_categories.json
scripts/: evaluate.py  ingest.py  run.py
src/: chunking.py  config.py  dataframe.py  evaluation.py  filter_engine.py  knowledge.py  logger.py  models.py  normalization.py  parsing.py  query_parser.py  rag.py  structured_pipeline.py  validation.py
